modifica il mud e implementa interfaces